-------------------

New features
 -

Enhancements
 - [web] allow custom email address to be one of the user's profile (#3551)
 - [web] the left column of the attendees editor is resizable (not supported in IE) (#1479, #3667)

Bug fixes
 - [eas] make sure we don't sleep for too long when EAS processes need interruption
 - [eas] fixed recurring events with timezones for EAS (#3822)
 - [core] only consider SMTP addresses for AD's proxyAddresses (#3842)

2.3.16 (2016-09-28)
-------------------

New features
 - [eas] initial support for server-side mailbox search operations

Enhancements
 - [eas] propagate message submission errors to EAS clients (#3774)
 - [web] updated CKEditor to version 4.5.11
 - [web] added Serbian (sr) translation - thanks to Bogdanović Bojan

Bug fixes
 - [web] correctly set percent-complete for tasks from the list view (#3197)
 - [core] fixed caching expiration of ACLs assigned to LDAP groups (#2867)
 - [core] we now search in all domain sources for Apple Calendar
 - [core] properly handle groups in Apple Calendar's delegation
 - [core] make sure new cards always have a UID (#3819)

2.3.15 (2016-09-14)
------------------

Enhancements
 - [web] don't allow a recurrence rule to end before the first occurrence

Bug fixes
 - [eas] properly generate the BusyStatus for normal events
 - [eas] properly escape all email and address fields
 - [eas] properly generate yearly rrule
 - [core] strip protocol value from proxyAddresses attribute (#3182)
 - [web] handle binary content transfer encoding when displaying mails

2.3.14 (2016-08-17)
-------------------

New features
 - [eas] added folder merging capabilities

Enhancements
 - [web] expunge drafts mailbox when a draft is sent and deleted
 - [web] style cancelled events in Calendar module (#2800)
 - [web] updated CKEditor to version 4.5.10

Bug fixes
 - [eas] fixed long GUID issue preventing sometimes synchronisation (#3460)
 - [web] improved extraction of HTML signature in Preferences module